fixed red bg on mobile nav

--- a/styles.css
+++ b/styles.css
@@ -485,7 +485,7 @@ textarea {
     .navMargins {
         margin: 0;
         width: 90%;
-        background-color: red;
+
     }
 
     .navMargins a {
